# branchingmodel

./: .gitignore  Untitled.ipynb  analysis.ipynb  branching_model.py  equilibrium.ipynb  pyproject.toml
src/branchingmodel/: __init__.py  networks.py  simulation.py
