[project]
name = "branchingmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Pounders", email = "jmpounders@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
]

[project.scripts]
branchingmodel = "branchingmodel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
